# daggers-in-the-dark

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.fast  AGENTS.md  Makefile  PRE_COMMIT_USAGE.md  README.md
.cursor/: mcp.json
.cursor/agents/base/: AGENTS.md
.cursor/agents/cpp-developer/: AGENTS.md
.cursor/agents/frontend-developer/: AGENTS.md
.cursor/agents/python-developer/: AGENTS.md
.cursor/agents/qa-engineer/: AGENTS.md
.cursor/agents/shared-patterns/: AGENTS.md
.cursor/agents/system-architect/: AGENTS.md
.cursor/rules/practices/: database.mdc  documentation.mdc  frontend_best_practices.mdc  llm_filtering.mdc  shrimp_task_manager.mdc  tdd.mdc
.cursor/rules/reference/: INDEX.mdc  commands.mdc  project_structure.mdc
.cursor/rules/setup/: frontend_tools.mdc  python_tools.mdc  security.mdc  validation.mdc
.devcontainer/: Dockerfile  README.md  compose.yml  devcontainer.json
Docs/: SystemDesign.md  TZ.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  db.py  dependencies.py  main.py  models.py  schemas.py
backend/app/api/: export_import.py  factions.py  graph.py  map_assets.py  pages.py  people.py  places.py  project.py  snapshots.py  tiles.py
backend/app/repositories/: __init__.py  faction_repo.py  link_repo.py  page_repo.py  person_repo.py  place_repo.py  snapshot_repo.py  tile_repo.py  world_repo.py
backend/app/services/: graph.py  graph_service.py  pages_service.py  project_service.py  snapshots_service.py  tiles_service.py  visibility.py  wikilinks.py
backend/tests/: README.md  conftest.py  test_api_export_import.py  test_api_factions.py  test_api_graph.py  test_api_map_assets.py  test_api_pages_player_scope.py  test_api_people.py  test_api_places.py  test_api_project.py  test_api_snapshots.py  test_api_tiles.py  test_main.py
backend/tests/unit/: test_visibility_filter.py  test_wikilinks.py
desktop/: README.md  package.json
desktop/src/: main.ts  preload.ts
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: example.spec.ts  map-ui.spec.ts  smoke.spec.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/__tests__/: App.integration.test.tsx  (+2 more)
(+30 files in other folders)
